<resources>
    <string name="app_name">MyFoody</string>
    <string name="splash_loading">Loading...</string>
    <string name="menu_item_explore_restaurant">Explore Restaurants</string>
    <string name="menu_item_user_info">User Info</string>
    <string name="menu_item_my_orders">My Orders</string>
    <string name="menu_item_invite_friends">Invite Friends</string>
    <string name="menu_item_change_password">Change Password</string>
    <string name="menu_item_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="close_button">Close Button for Activity</string>
    <string name="newUser">Do not have an account, sign up here.</string>
    <string name="copyRight">MyFoody@douglas.college.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have and account? Login here.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Foody</string>
    <string name="nav_header_subtitle">My Foody</string>
    <string name="nav_header_desc">My Foody</string>
    <string name="editBtn">EDIT</string>
    <string name="changePasswordButton">CHANGE</string>
    <string name="displayChangePasswordBtn">CHANGE PASSWORD</string>
    <string name="cancelChangePasswordBtn">CANCEL</string>
    <string name="newPassword">New Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="changePasswordTitle">CHANGE PASSWORD</string>
    <string name="userInfoTitle">USER INFO</string>
    <string name="exploreRestaurantTitle">EXPLORE RESTAURANT</string>
    <string name="orderHistory">Order Histories</string>
    <string name="listRestaurantTitle">List of Restaurant Nearby</string>
    <string name="menuItems">*** Menu ***</string>
    <string name="addItem">Add</string>
    <string name="removeItem">Remove</string>
    <string name="searchBtn">SEARCH NEAR BY</string>
    <string name="strDone">Done</string>
    <string name="place_order">Place Order</string>
    <string name="place_order_instruction">Special Instructions</string>
    <string name="place_order_promotion">Discount Code</string>
    <string-array name="discount_code">
        <item>None</item>
    </string-array>
    <string name="place_order_subtotal">Sub Total: $</string>
    <string name="place_order_fee">Delivery Fee: $</string>
    <string name="place_order_discount">Discount: $</string>
    <string name="place_order_tax">Tax: $</string>
    <string name="place_order_total">Total: $</string>
    <string name="place_order_delivery">Delivery Option</string>
    <string-array name="delivery_options">
        <item>Pick Up</item>
        <item>Delivery</item>
    </string-array>
    <string name="place_order_delivery_to">Delivery Address</string>
    <string name="place_order_to_payment">Place Order</string>
    <string name="place_order_payment">Payment Details</string>
    <string name="place_order_payment_card_name">Name on Card</string>
    <string name="place_order_payment_card_number">Card Number</string>
    <string name="place_order_payment_card_number_hint">XXXX XXXX XXXX XXXX</string>
    <string name="place_order_payment_card_expiry">Expiry At</string>
    <string name="place_order_payment_card_expiry_hint">MM/YY</string>
    <string name="place_order_payment_card_code">Security Code</string>
    <string name="place_order_payment_card_code_hint">XXX</string>
    <string name="place_order_confirm">Confirm</string>
    <string name="place_order_thank_you">Thank You!</string>
    <string name="place_order_completed">Your order has been placed.</string>
    <string name="invite_friend_description">Lets your friends know</string>
    <string name="invite_friend_benefit">And enjoy 10% off on your next order</string>
    <string name="invite_friend_email">Emails</string>
    <string name="invite_friend_email_hint">One email on each line.</string>
    <string name="invite_friend_button">Invite</string>
    <string name="title_restaurant_list">Restaurants</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_order_list">Orders</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="my_orders_subtotal">Subtotal</string>
    <string name="my_order_delivery_fee">Delivery fee</string>
    <string name="my_order_tax">Tax</string>
    <string name="my_order_discount">Discount</string>
    <string name="my_order_total">Total</string>
    <string name="my_order_delivery_address">Delivery address</string>
    <string name="my_order_special_instruction">Special instructions</string>
    <string name="orderDetailTitle">Order Details</string>
</resources>
