<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_payment"
        android:textSize="30sp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewShowSubTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/place_order_subtotal"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewShowDeliveryFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/place_order_fee"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewShowDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/place_order_discount"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewShowTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewShowTotal"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5sp"
        android:text="@string/place_order_tax"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewShowTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5sp"
        android:text="@string/place_order_total"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_payment_card_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_payment_card_number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/place_order_payment_card_number_hint"
        android:inputType="number"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_order_payment_card_expiry"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewCardCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_order_payment_card_code"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/place_order_payment_card_expiry_hint"
            android:inputType="date"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextCardCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/place_order_payment_card_code_hint"
            android:inputType="number"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_confirm"
        android:textSize="24sp" />

</LinearLayout>