<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewItemNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewSubTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:text="@string/place_order_instruction"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextInstructions"
        android:layout_width="fill_parent"
        android:layout_height="94dp"
        android:hint="@string/place_order_instruction"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        tools:ignore="AutoFill"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/textViewDiscountCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:text="@string/place_order_promotion"
        android:padding="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerDiscountCodes"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:entries="@array/discount_code"
        android:padding="10dp"
        android:spinnerMode="dialog" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewDeliveryOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_delivery"
        android:padding="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerDeliveryOptions"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:padding="10dp"
        android:entries="@array/delivery_options" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/textViewDeliveryTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_delivery_to"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDeliveryTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/place_order_delivery_to"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="AutoFill"
        />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/buttonPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/place_order_to_payment"
        android:textSize="24sp" />

</LinearLayout>